--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ html {
 
 .latest-article {
   border: 1px solid #000;
-  margin: 30px 0 20px 0;
+  margin: 30px 0 0px 0;
   width: 100%;
   height: 7.5rem;
 }
@@ -166,7 +166,7 @@ html {
 }
 
 .latest-article:nth-child(2) div {
-  background: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/OnePlus-8-Pro-screen-514x270.jpg") center;
+  background: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/keyword_in-device_2000x1400_1.max-1000x1000-386x270.jpg") center;
   background-size: cover;
 }
 
@@ -608,13 +608,33 @@ figcaption span a {
     font-size: 16px;
     color: #000;
     font-weight: bold;
+    height: 100%;
   }
 
-  .latest-article img {
-    width: 100%;
-    height: 100%;
-    float: none;
+  .latest-article figure {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    position: relative;
   }
+
+  .latest-article p {
+    height: 100%;
+  }
+
+  .latest-article figure div {
+    width: 100%;
+    /* position: absolute;
+    bottom: 100%; */
+    height: 14rem;
+    /* float: none; */
+  }
+
+  /* .latest-article figure figcaption {
+    position: absolute;
+    bottom: .2rem;
+    height: 20%;
+  } */
 
   .latest-funding div ul {
     width: 30rem;
@@ -646,10 +666,6 @@ figcaption span a {
 
   .category-hero {
       height: 27.7rem;
-  }
-
-  .deals {
-
   }
 
   .deals-wrapper {
