--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ html {
 .latest, .deals {
   width: 95%;
   height: auto;
-  margin: auto;
+  margin: 6rem auto 0 auto;
 }
 
 .latest {
@@ -148,7 +148,6 @@ html {
 }
 
 .latest-article {
-  border: 1px solid #000;
   margin: 30px 0 0px 0;
   width: 100%;
   height: 7.5rem;
@@ -329,6 +328,10 @@ figcaption span a {
 .news-categories {
   display: grid;
   grid-template-columns: 1fr;
+}
+
+.news-categories section {
+  margin-top: 4rem;
 }
 
 .news-categories hr {
