--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ html {
 }
 
 .latest-article {
-  margin: 30px 0 0px 0;
+  margin: 0 0 3rem 0;
   width: 100%;
   height: 7.5rem;
 }
@@ -619,9 +619,13 @@ figcaption span a {
     margin-bottom: 6rem;
   }
 
+  .latest .category-name {
+    margin-bottom: 2rem;
+  }
+
   .latest-article {
     width: 100%;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
     font-size: 14px;
     color: #000;
     font-weight: bold;
@@ -649,9 +653,21 @@ figcaption span a {
     justify-content: flex-start;
   }
 
+  .latest-funding > div > ul li {
+    margin: .5rem 0;
+  }
+
   .latest-funding div li a {
-    /* border-right: 1px #f42 solid; */
+    border-right: 1px #f42 solid;
     padding: 0 .7rem;
+  }
+
+  .latest-funding div li .no-padding {
+    padding-left: 0;
+  }
+
+  .latest-funding div li .no-border {
+    border-right: none;
   }
 
   .latest-funding-wrapper {
