--- a/style.css
+++ b/style.css
@@ -498,12 +498,12 @@ figcaption span a {
 }
 
 .deals-info {
-  width: calc(100% - 8.5rem);
+  /* width: calc(100% - 8.5rem); */
   margin-top: 1rem;
 }
 
 .deals-title {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   line-height: 1.3;
   text-decoration: none;
   color: #000;
