--- a/style.css
+++ b/style.css
@@ -370,17 +370,52 @@ figcaption span a {
 }
 
 .apps-hero {
-  background-image: linear-gradient(to top,
-      rgba(0, 0, 0, 0.8),
-      rgba(255, 255, 255, 1)
-    ),
-    url(./img/zoom-5.0-1024x576-796x448.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background-size: 100% 100%;
   background-position: 50% 50%;
 }
 
+.gear-hero {
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background-size: 100% 100%;
+  background-position: 50% 50%;
+}
 
+.tech-hero {
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background-size: 100% 100%;
+  background-position: 50% 50%;
+}
+
+.creative-hero {
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background-size: 100% 100%;
+  background-position: 50% 50%;
+}
+
+.podium-hero {
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background-size: 100% 100%;
+  background-position: 50% 50%;
+}
+
+.insights-hero {
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background-size: 100% 100%;
+  background-position: 50% 50%;
+}
+
+.launch-hero {
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background-size: 100% 100%;
+  background-position: 50% 50%;
+}
+
+.distract-hero {
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background-size: 100% 100%;
+  background-position: 50% 50%;
+}
 
 .category-second {
   width: 100%;
@@ -752,15 +787,6 @@ figcaption span a {
   .category-hero {
     height: 27.7rem;
   }
-
-  /* .deals-wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, auto);
-    gap: 15px;
-    justify-content: space-between;
-    margin-bottom: 6rem;
-  } */
 
   .deals-article {
     flex-direction: column;
