Add bg images to news categories hero section

--- a/style.css
+++ b/style.css
@@ -98,12 +98,12 @@ html {
 }
 
 .article2 {  
-  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg");
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/AI-Model-Srec-796x418.png");
   background-size: 100% 100%;
 }
 
 .article3 {  
-  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg");
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Untitled-design-14-796x417.png");
   background-size: 100% 100%;
 }
 
@@ -370,49 +370,49 @@ figcaption span a {
 }
 
 .apps-hero {
-  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background: url(./img/image-gradient.png), url(./img/zoom-5.0-1024x576-796x448.jpg) no-repeat;
   background-size: 100% 100%;
   background-position: 50% 50%;
 }
 
 .gear-hero {
-  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/OnePlus-8-Pro-screen-368x276.jpg") no-repeat;
   background-size: 100% 100%;
   background-position: 50% 50%;
 }
 
 .tech-hero {
-  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/AI-Model-Srec-368x276.png") no-repeat;
   background-size: 100% 100%;
   background-position: 50% 50%;
 }
 
 .creative-hero {
-  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Untitled-design-11-368x276.png") no-repeat;
   background-size: 100% 100%;
   background-position: 50% 50%;
 }
 
 .podium-hero {
-  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Featured-Image-The-Next-Web-368x276.jpeg") no-repeat;
   background-size: 100% 100%;
   background-position: 50% 50%;
 }
 
 .insights-hero {
-  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/woman-women-female-gq-368x276.png") no-repeat;
   background-size: 100% 100%;
   background-position: 50% 50%;
 }
 
 .launch-hero {
-  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/JioMart-WhatsApp-Ordering-hed-368x276.jpg") no-repeat;
   background-size: 100% 100%;
   background-position: 50% 50%;
 }
 
 .distract-hero {
-  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg") no-repeat;
+  background: url(./img/image-gradient.png), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/joel-muniz-Y6CT3a-RJ68-unsplash-1-368x276.jpg") no-repeat;
   background-size: 100% 100%;
   background-position: 50% 50%;
 }
