--- a/style.css
+++ b/style.css
@@ -428,6 +428,7 @@ figcaption span a {
   justify-content: space-between;
   background: rgb(250, 240, 238);
   margin-top: .4rem;
+  overflow: hidden;
 }
 
 /* .category-second .category-red */
