--- a/style.css
+++ b/style.css
@@ -114,6 +114,8 @@ html {
 }
 
 .article-category {
+  margin-bottom: 1rem;
+  font-size: 1.4rem;
   color: rgb(231, 228, 228);
 }
 
@@ -123,6 +125,8 @@ html {
 }
 
 .article-meta {
+  margin-top: 1rem;
+  font-size: 1.2rem;
   color: #555;
 }
 
