--- a/style.css
+++ b/style.css
@@ -7,82 +7,93 @@ html {
   box-sizing: border-box;
 }
 
-/* nav div:first-child {
-  background-color: blue;
-} */
-
 .nav-top {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 10.6rem 1fr;
+  grid-template-rows: auto auto;
+  grid-template-areas: 
+      "tnw-logo first-part"
+      "tnw-logo second-part";
 }
 
-.nav-top .first,
-.nav-top .second {
-  display: flex;
-}
-
-.nav-top .first li,
-.nav-top .second li {
+.nav-top li {
   display: inline;
 }
 
-.nav-top .first a,
-.nav-top .second a {
+.nav-top a {
   text-decoration: none;
 }
 
-.nav-top a.logo {
+.tnw-logo {
+  grid-area: tnw-logo;
   display: flex;
-  align-items: center;
   justify-content: center;
-  width: 90px;
-  height: 48px;
+  align-items: center;
   background-color: #f42;
 }
 
-.nav-top a img {
-  width: 66px;
-  height: 16px;
+.tnw-logo img {
+  width: 8rem;
 }
 
-/* nav div {
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	border: 1px solid green;
-	width: 9.6rem;
-	height: 4.8rem;
-} */
-
-/* nav li {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-} */
-
-/* .nav-top ul {
+.first-part {
+  height: 3.2rem;
   display: flex;
-  justify-content: center;
-  margin: auto;
-} */
+  justify-content: space-between;
+  align-items: center;
+  grid-area: first-part;
+  background-color: #000;
+}
 
+.first-part a {
+  color: #fff;
+}
 
-/* .nav-top .fas::before {
-  padding-top: 25px;
-} */
+.first-left li,
+.first-right li {
+  margin: 0 1rem;
+}
+
+.second-part {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  grid-area: second-part;
+  height: 4.8rem;
+}
+
+.second-part a {
+  color: #aaa;
+}
+
+.second-left li {
+  margin: 0 1rem;
+}
+
+.second-right {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 1rem;
+}
+
+.second-right i {
+  font-size: 2rem;
+  margin: 0 1rem;
+}
 
 .nav-top .fa-bars {
   color: #f42;
 }
 
-.nav-top div .fas {
+/* .nav-top div .fas {
   /* float: left; */
   margin: auto;
   width: 4.8rem;
   height: 4.8rem;
   font-size: 2rem;
   border-left: 0.1rem solid gray;
-}
+} */
 
 .hero-section {
   display: grid;
