--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ html {
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: auto auto;
-  grid-template-areas: 
-      "tnw-logo first-part"
-      "tnw-logo second-part";
+  grid-template-areas:
+    "tnw-logo first-part"
+    "tnw-logo second-part";
 }
 
 .nav-top li {
@@ -86,15 +86,6 @@ html {
 .nav-top .fa-bars {
   color: #f42;
 }
-
-/* .nav-top div .fas {
-  /* float: left; */
-  margin: auto;
-  width: 4.8rem;
-  height: 4.8rem;
-  font-size: 2rem;
-  border-left: 0.1rem solid gray;
-} */
 
 .hero-section {
   display: grid;
@@ -235,7 +226,6 @@ html {
   background: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Levy-Electric-Scooter-4-of-4-515x270.jpg") center;
   background-size: cover;
 }
-
 
 .latest-article span {
   color: #aaa;
@@ -463,7 +453,6 @@ figcaption span a {
 
 .category-second div {
   padding: 1rem 1.4rem 0;
-
 }
 
 .category-second img {
@@ -498,7 +487,7 @@ figcaption span a {
   font-size: 1.3rem;
 }
 
-.category-third > h2 > a:before {
+.category-third > h2 > a::before {
   background-color: #f42;
   border-radius: 50%;
   content: "";
@@ -523,7 +512,7 @@ figcaption span a {
   margin-bottom: 1.2rem;
 }
 
-.deals-article a {  
+.deals-article a {
   width: 7.5rem;
   color: #000;
   margin-right: 1rem;
@@ -785,8 +774,6 @@ figcaption span a {
     height: 100%;
   }
 
-
-
   .latest-funding div ul {
     display: flex;
     justify-content: flex-start;
@@ -817,6 +804,7 @@ figcaption span a {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem;
+
     /* margin-top: 2rem; */
   }
 
@@ -930,7 +918,6 @@ figcaption span a {
   .latest-funding .flex ul li .first {
     border-right: none;
   }
-
 
   .latest-funding .flex ul li .second {
     border-right: #f42 1px solid;
